[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/elements/options/dropdownoption.gd" type="Script" id=1]
[ext_resource path="res://ui/elements/options/baseoption.tscn" type="PackedScene" id=2]

[node name="DropdownOption" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BaseOption" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Label" parent="BaseOption/HBoxContainer" index="0"]
margin_right = 638.0

[node name="ButtonsContainer" type="HBoxContainer" parent="BaseOption/HBoxContainer" index="1"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionButton" type="OptionButton" parent="BaseOption/HBoxContainer/ButtonsContainer"]
margin_right = 638.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
clip_text = true

[node name="OptionalButton" type="Button" parent="BaseOption/HBoxContainer/ButtonsContainer"]
visible = false
margin_left = 607.0
margin_right = 638.0
margin_bottom = 700.0
rect_min_size = Vector2( 25, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
[connection signal="pressed" from="BaseOption/HBoxContainer/ButtonsContainer/OptionalButton" to="." method="_on_OptionalButton_pressed"]

[editable path="BaseOption"]
